--- a/docker-compose-por-aula/aula-07.yml
+++ b/docker-compose-por-aula/aula-07.yml
@@ -105,7 +105,7 @@ services:
       context: ../
       dockerfile: ./data/python/Dockerfile
     volumes:
-      - ../python-app:/home/awari/app
+      - ..:/home/awari/app
     ports:
       - "5001:5001"
     networks:
